@@ -1091,8 +1091,8 @@ func (p *HttpProxy) waitForRedirectUrl(session_id string) (string, bool) {
 }
 
 func (p *HttpProxy) blockRequest(req *http.Request) (*http.Request, *http.Response) {
-	if len(p.cfg.general.RedirectUrl) > 0 {
-		redirect_url := p.cfg.general.RedirectUrl
+	if len(p.cfg.general.UnauthUrl) > 0 {
+		redirect_url := p.cfg.general.UnauthUrl
 		resp := goproxy.NewResponse(req, "text/html", http.StatusFound, "")
 		if resp != nil {
 			resp.Header.Add("Location", redirect_url)
